--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,17 @@ services:
     container_name: product_card
     build: .
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.product-card.rule=Host(`productcard.mytestingenlocal.ml`)"
-      - "traefik.http.routers.product-card.rule=web-secured"
-      - "traefik.http.routers.product-card.tls.certresolver=mytlschallenge"
-      - "traefik.http.services.product-card.loadbalance.server.port=3001"
+      - "traefik.enable=true" # <== Enable traefik to proxy this container
+      - "traefik.http.routers.product-card.rule=Host(`productcard.mytestingenlocal.ml`)" # <== Your Domain Name for the https rule
+      - "traefik.http.routers.product-card.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
+      - "traefik.http.routers.product-card.tls.certresolver=mytlschallenge" # <== Defining certsresolvers for https
+      - "traefik.http.services.product-card.loadbalancer.server.port=3000" # 3000 is the port we proxy to
       # no https
-      - "traefik.http.routers.product-card-http.rule=Host(`productcard.mytestingenlocal.ml`)"
-      - "traefik.http.routers.product-card-http.entrypoints=web"
-      - "traefik.http.routers.product-card-http.middlewares=redirect@file"
-
+      - "traefik.http.routers.product-card-http.rule=Host(`productcard.mytestingenlocal.ml`)" # <== Your Domain Name goes here for the http rule
+      - "traefik.http.routers.product-card-http.entrypoints=web" # <== Defining the entrypoint for http, **ref: line 30
+      - "traefik.http.routers.product-card-http.middlewares=redirect@file" # <== This is a middleware to redirect to https
+    environment:
+      - PORT=3000
     networks:
       - web
 
